# LLM-Based-Invoice-Data-Management-System

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  response.json  response2.json  response4.json  seed_dashboard_data.sql  test-filters.js  test-register.js  test_invoice.sh
extraction-service/: .env.example  Dockerfile  Dockerfile.prod  README.md  debug_import.py  debug_output.txt  pyproject.toml  requirements-dev.txt  requirements.txt
extraction-service/app/: main.py
extraction-service/app/config/: settings.py  validation_config.py
extraction-service/app/core/: exceptions.py  logging.py  middleware.py
extraction-service/app/messaging/: connection_manager.py  consumer.py  message_models.py  publisher.py
extraction-service/app/models/: extraction.py  invoice_data.py  preprocessing.py  provider_status.py  requests.py  responses.py  validation.py
extraction-service/app/services/: usage_reporter.py
extraction-service/src/: main.py
extraction-service/src/api/: health.py
extraction-service/tests/: conftest.py  debug_validator.py  dummy_test.py  test_api.py.bak  test_api_preprocessing.py  test_config.py  test_extraction_flow.py  test_fallback_chain.py  test_health.py  test_image_enhancer.py  test_image_loader.py  test_image_optimizer.py  test_llm_components.py  test_models.py  test_new_providers.py  test_pdf_converter.py  test_pipeline.py
extraction-service/tests/fixtures/: create_fixtures.py  mock_responses.json
extraction-service/tests/integration/: conftest.py  test_api_integration.py  test_api_validation.py  test_consumer_flow.py  test_data_validation.py  test_extraction_flow.py  test_extraction_pipeline.py  test_fallback_flow.py  (+6 more)
(+923 files in other folders)
