[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fatura-ocr-extraction-service"
version = "1.0.0"
description = "LLM based invoice data extraction service"
authors = [
    {name = "Muhammed Furkan Akdağ", email = "furkan@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
]
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
